--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>MVCSSLV</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
+  <display-name>java2</display-name>
+  <filter>
+    	<filter-name>MainPageMVCFilter</filter-name>
+    	<filter-class>mvc.mainpage.MainPageMVCFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    	<filter-name>MainPageMVCFilter</filter-name>
+    	<url-pattern>/</url-pattern>
+  </filter-mapping>
+  <filter>
+    	<filter-name>LoginPageMVCFilter</filter-name>
+    	<filter-class>mvc.loginpage.LoginPageMVCFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    	<filter-name>LoginPageMVCFilter</filter-name>
+    	<url-pattern>/login/</url-pattern>
+  </filter-mapping>
 </web-app>
