--- a/MVCSSLV/.classpath
+++ b/MVCSSLV/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
@@ -13,5 +13,23 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/avro-1.6.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/hibernate-core-4.1.9.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/jackson-mapper-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/javassist-3.17.1-GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/lucene-core-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/mysql-connector-java-5.1.23-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/paranamer-2.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/required/snappy-java-1.0.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jms-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jta-1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
