--- a/MVCSSLV/.classpath
+++ b/MVCSSLV/.classpath
@@ -31,5 +31,79 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jms-1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jsr250-api-1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/provided/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/hibernate-search-infinispan-4.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/infinispan-core-5.1.8.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/infinispan-lucene-directory-5.1.8.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/jboss-marshalling-1.3.11.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/jboss-marshalling-river-1.3.11.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/jgroups-3.0.14.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/rhq-pluginAnnotations-3.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/stax2-api-3.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/clustering/woodstox-core-asl-4.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/guava-r05.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/hibernate-entitymanager-4.1.9.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/hibernate-search-analyzers-4.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/javassist-3.12.1.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-analyzers-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-grouping-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-highlighter-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-kuromoji-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-memory-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-misc-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-phonetic-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-smartcn-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-spatial-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-spellchecker-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/lucene-stempel-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/solr-analysis-extras-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/solr-core-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/optional/solr-solrj-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/avro-1.6.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava-r05.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-core-4.1.9.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-entitymanager-4.1.9.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-search-analyzers-4.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-search-infinispan-4.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/infinispan-core-5.1.8.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/infinispan-lucene-directory-5.1.8.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.12.1.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.17.1-GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-marshalling-1.3.11.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-marshalling-river-1.3.11.GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jgroups-3.0.14.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jms-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-analyzers-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-core-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-grouping-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-highlighter-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-kuromoji-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-memory-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-misc-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-phonetic-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-smartcn-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-spatial-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-spellchecker-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lucene-stempel-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.23-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/paranamer-2.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/rhq-pluginAnnotations-3.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/snappy-java-1.0.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/solr-analysis-extras-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/solr-core-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/solr-solrj-3.6.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/stax2-api-3.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/woodstox-core-asl-4.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
