--- a/MVCSSLV/.project
+++ b/MVCSSLV/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MVCSSLV</name>
+	<name>java2</name>
 	<comment></comment>
 	<projects>
 	</projects>
