--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -4,14 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>java2</display-name>
-	<filter>
-		<filter-name>MainPageMVCFilter</filter-name>
-		<filter-class>mvc.mainpage.MainPageMVCFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>MainPageMVCFilter</filter-name>
-		<url-pattern>/</url-pattern>
-	</filter-mapping>
+	
 	<filter>
 		<filter-name>LoginPageMVCFilter</filter-name>
 		<filter-class>mvc.loginpage.LoginPageMVCFilter</filter-class>
@@ -36,4 +29,29 @@
 		<filter-name>NewAdPageMVCFilter</filter-name>
 		<url-pattern>/add/</url-pattern>
 	</filter-mapping>
+	
+	<servlet>
+  	<servlet-name>mvc-dispatcher</servlet-name>
+        <servlet-class>
+                  org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+  	</servlet>
+ 
+  	<servlet-mapping>
+ 		<servlet-name>mvc-dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+  	</servlet-mapping>
+  	
+  	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/classes/BeanLocations.xml</param-value>
+  	</context-param>
+ 
+  	<listener>
+        <listener-class>
+		org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+  	</listener>
+	
 </web-app>
