--- a/MVCSSLV/pom.xml
+++ b/MVCSSLV/pom.xml
@@ -7,6 +7,17 @@
 	<packaging>war</packaging>
 	<name>java2</name>
 	<description>SSLV-java2</description>
+	    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>    
+        </plugins>
+    </build>
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
