--- a/MVCSSLV/pom.xml
+++ b/MVCSSLV/pom.xml
@@ -81,6 +81,9 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
 					<webXml>WebContent/WEB-INF/web.xml</webXml>
 					<webResources>
 						<resource>
