--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>java2</display-name>
 	
 	<servlet>
-  	<servlet-name>mvc-dispatcher</servlet-name>
+  		<servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>
                   org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
@@ -14,19 +14,29 @@
   	</servlet>
  
   	<servlet-mapping>
- 		<servlet-name>mvc-dispatcher</servlet-name>
-        <url-pattern>/</url-pattern>
-  	</servlet-mapping>
-  	
-  	<context-param>
+		<servlet-name>mvc-dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:BeanLocations.xml</param-value>
   	</context-param>
- 
+  	
   	<listener>
         <listener-class>
 			org.springframework.web.context.ContextLoaderListener
         </listener-class>
   	</listener>
-	
+  	
+  	<servlet>
+    	<servlet-name>gwtService</servlet-name>
+    	<servlet-class>mvc.web.server.GreetingServiceGWTWrapperImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+    	<servlet-name>gwtService</servlet-name>
+    	<url-pattern>/application/greetingService</url-pattern>
+	</servlet-mapping>
+  		
 </web-app>
