Refactoring to be more aligned with target application

--- a/MVCSSLV/WebContent/WEB-INF/web.xml
+++ b/MVCSSLV/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>java2</display-name>
@@ -31,7 +31,7 @@
   	
   	<servlet>
     	<servlet-name>gwtService</servlet-name>
-    	<servlet-class>net.voaideahost.sslv.mvc.gwt.web.server.GreetingServiceGWTWrapperImpl</servlet-class>
+    	<servlet-class>net.voaideahost.sslv.mvc.gwt.web.server.IndexGWTWrapperImpl</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
