gwt 16 - preparing to login (many changes to it)

--- a/MVCSSLV/pom.xml
+++ b/MVCSSLV/pom.xml
@@ -140,6 +140,8 @@
 								<include>**${file.separator}*.jsp</include>
 								<include>**${file.separator}*.css</include>
 								<include>**${file.separator}*.jpg</include>
+								<include>**${file.separator}*.gif</include>
+								<include>**${file.separator}*.png</include>
 							</includes>
 						</resource>
 						<resource>
