--- a/MVCSSLV/src/main/resources/jdbc.properties
+++ b/MVCSSLV/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://mysql-env-5179325.jelastic.dogado.eu:3306/suxlv2_sslv?autoReconnect=true
-jdbc.username=suxlv2_sslv
-jdbc.password=a26195359
+jdbc.url=jdbc:mysql://localhost:3311/suxlv2_sslv?autoReconnect=true
+jdbc.username=root
+jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
