--- a/MVCSSLV/src/main/resources/jdbc.properties
+++ b/MVCSSLV/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3311/suxlv2_sslv?autoReconnect=true
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://localhost:3306/sslv?autoReconnect=true
+jdbc.username=sslv
+jdbc.password=sslv01
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
